--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0-rc"
   }
 }
