--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "next": "15.0.3",
-    "react": "18.3.1",
+    "react": "^18.0.0 || ^19.0.0-rc",
     "react-dom": "18.3.1",
     "react-icons": "^5.3.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
